# getting_started_with_nrf_cloud

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  prj.conf
src/: main.c
src/watchdog/: watchdog.c  watchdog.h
